# idk

./: .gitignore  CMakeLists.txt  README.md
include/: il2cpp_base.hpp  il2cpp_dumper.hpp
src/: dllmain.cpp  il2cpp_base.cpp  il2cpp_dumper.cpp  main.cpp
